# BasicRasterizer

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  main.cpp
src/camera/: Camera.h  CameraAttributes.h
src/draw/: Colour.h  DrawUtility.cpp  DrawUtility.h  Rect.h  Triangle.h  Triangle3D.h
src/frame/: Frame.cpp  Frame.h
src/geometry/: Face.h  Geometry.cpp  Geometry.h
src/input/: Input.cpp  Input.h  InputPrimitive.cpp  InputPrimitive.h
src/output/: Output.cpp  Output.h  OutputSFML.cpp  OutputSFML.h
